tests/ui/coherence/coherence-orphan.stderr
error[E0321]: cross-crate traits with a default impl, like `Send`, can only be implemented for a struct/enum type defined in the current crate
  --> $DIR/coherence-orphan.rs:22:1
   |
LL | impl !Send for Vec<isize> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait for type in another crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0321`.
